Updated READ.me
READ.me has full description of the assignment